fix math length too long in mobile

--- a/themes/next/source/css/_custom/custom.styl
+++ b/themes/next/source/css/_custom/custom.styl
@@ -93,3 +93,10 @@ sup {
 sup a {
   text-decoration: none;
 }
+
+@media (max-width: 800px) {
+  .MathJax_Display {
+    overflow-x: scroll;
+    overflow-y: hidden;
+  }
+}
